--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
 
     <build>
         <plugins>
+      <plugin>
+        <groupId>com.heroku.sdk</groupId>
+        <artifactId>heroku-maven-plugin</artifactId>
+        <version>1.2.1</version>
+      </plugin>
+    </plugins>
+        <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
